--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -1,5 +1,5 @@
 name: black-formatter
-on: [pull_request, push]
+on: [pull_request, push, workflow_dispatch]
 jobs:
   linter_name:
     name: runner / black
