--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "bitsightpy"
-version = "0.1.4"
+version = "0.1.5"
 description = "An SDK for working with BitSight Tech APIs"
 authors = ["0x41424142 <jake@jakelindsay.uk>", "0x4A414B45 <jake.lindsay@thermofisher.com"]
 license = "MIT"
@@ -12,6 +12,9 @@ requests = "^2.32.3"
 frozendict = "^2.4.4"
 mkdocs = "^1.6.0"
 mkdocs-material = "^9.5.31"
+
+[tool.poetry.scripts]
+bitsightpy = "bitsightpy.cli:main"
 
 [tool.poetry.urls]
 Homepage = "https://github.com/0x41424142/bitsightpy"
